   - on_platform_created: right after the XML parsing
   - on_time_advance: each time the clock advances
   - on_simulation_end: after simulation, before cleanups
   - on_deadlock: as the name implies.
 - C bindings:
   - sg_{actor,host,link}_{data,data_set}() now all exist.
     Use them to attach user data to the object and retrieve it.

Models:
 - Improved the usability of ns-3. Several bugs were ironed out.
 - Introduce an experimental Wifi model. It sounds reasonable
   according to the state of the art, but it still has to be properly
   validated, at least against ns-3.

MSG:
 - convert a new set of functions to the S4U C interface and move the old MSG
   versions to legacy (MSG_process_self*, MSG_process_{un}ref, ...)

SMPI:
 - Fortran bindings for DVFS have been removed.
 - Add support for MPI_Irsend, MPI_Rsend, MPI_Rsend_init, MPI_Bsend,
   MPI_Ibsend, MPI_Bsend_init, MPI_Buffer_attach, MPI_Buffer_detach
 - SMPI can now be selected by cmake's find_module(MPI) with
   MPI_C_COMPILER, MPI_CXX_COMPILER, MPI_Fortran_COMPILER variables.
 - Add support for MPI Errhandlers in Comm, File or Win. Default errhandler is now
   MPI_ERRORS_ARE_FATAL, so codes which were sending warnings may start failing.
 - trace-call-location can now be used with TI traces, and replayed.
 - Default for trace-call-location is now to use file names and not full paths.
   To revert to previous behaviour (in case of collision of filenames), option
   "smpi/trace-call-use-absolute-path" can be set to yes.

Model-Checker:
 - Use the included xxHash as an hash implem when C++14 is usable.
 - Option model-checker/hash was removed. This is always activated now.
 - New option smpi/buffering controls the MPI buffering in MC mode.
 - MPI calls now MC_assert() that no MPI_ERR_* code is returned.
   This is useful to check for MPI compliance.

XBT:
 - xbt_mutex_t and xbt_cond_t are now marked as deprecated, a new C interface